Adding features to Login using JWT